# ReadLastNLines

./: CMakeLists.txt  README.md
TestData/: two_input.txt
src/: read_last_n_lines.cpp
